<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/home_activity"
    tools:context="io.money.moneyie.activities.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appSilver">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/home_toolbar_sandwich_btn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/sandwich"/>

            <TextView
                android:id="@+id/home_toolbar_app_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/expense"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:fontFamily="serif"/>

            <ImageView
                android:id="@+id/home_toolbar_statistics_icon_btn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/statistics_icon"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/dlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tbHeader">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/home_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_home_footer"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/home_drawer_menu"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#1C1C1C"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF"/>

            <Button
                android:id="@+id/home_income_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/income_ic"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/income_ic"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/income"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF" />

            <Button
                android:id="@+id/home_outcome_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/expense_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/expense_icon"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/expense"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF" />

            <Button
                android:id="@+id/home_statistics_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/statistics_ic"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/statistics_ic"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/statistics"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF" />

            <Button
                android:id="@+id/home_myProfile_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/myprof_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/myprof_icon"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/my_profile"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF" />

            <Button
                android:id="@+id/home_alarms_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/alarm_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/alarm_icon"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/reminders"
                android:textColor="#FFFFFF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF" />

            <Button
                android:id="@+id/home_add_friend_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/add_friend_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/add_friend_icon"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/add_friend"
                android:textColor="#FFFFFF"
                android:visibility="invisible" />


            <View
                android:id="@+id/home_view_friend"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4" />

            <View
                android:id="@+id/home_view_logout"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#1eFFFFFF"
                android:visibility="invisible" />

            <Button
                android:id="@+id/home_logout_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/drawer_button_design"
                android:drawableLeft="@drawable/logout_icon"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/logout_icon"
                android:fontFamily="sans-serif"
                android:gravity="start|center_vertical"
                android:paddingLeft="25dp"
                android:text="@string/log_out"
                android:textColor="#FFFFFF"
                android:visibility="invisible" />
        </LinearLayout>

    </android.support.v4.widget.DrawerLayout>


</LinearLayout>
