<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:id="@+id/alarms_layout"
    tools:context="io.money.moneyie.fragments.Fragment_Reminders">

    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <ImageView
            android:id="@+id/alarm_question"
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:src="@drawable/question_mark" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add_new_reminder"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/alarm_eye"
            android:layout_height="45dp"
            android:layout_width="45dp"
            android:src="@drawable/eye_visible" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alarm_add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/alarm_date_set_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:focusable="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/alarm_time_set_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:focusable="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/SilverTextInputLayout">

                <EditText
                    android:id="@+id/alarm_message_set_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/message"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/alarm_add_btn"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/add_button_reminders"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminders"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_alarms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

</LinearLayout>
